Fix dropdown indicator color in dark mode
Unfortunately using `currentColor` does not work in SVGs when they are used as a `background-image`. Using a CSS filter also didn't work since it targeted the whole control. Next I tried to use `light-dark`, but apparently that is not valid for `background-image` either, so I ended up with this slightly more complicated pattern. There might be ways to improve this, but this is good enough for now unless anyone wants to spend time optimizing this further :)

--- a/app/templates/settings/tokens/new.css
+++ b/app/templates/settings/tokens/new.css
@@ -38,11 +38,21 @@
 
 .expiry-select {
     padding-right: var(--space-m);
-    background-image: url("/assets/dropdown.svg");
+    background-image: url("/assets/dropdown-black.svg");
     background-repeat: no-repeat;
     background-position: calc(100% - var(--space-2xs)) center;
     background-size: 10px;
     appearance: none;
+
+    [data-color-scheme="system"] & {
+        @media (prefers-color-scheme: dark) {
+            background-image: url("/assets/dropdown-white.svg");
+        }
+    }
+
+    [data-color-scheme="dark"] & {
+        background-image: url("/assets/dropdown-white.svg");
+    }
 }
 
 .expiry-date-input {
